<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout style="@style/TeamColumnStyle">

            <TextView
                style="@style/TeamLabelStyle"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/score_team_a_value_txt"
                style="@style/ScoreTextStyle"
                android:text="@string/zero_value" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/fouls_team_a_label_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fouls_label" />

                <TextView
                    android:id="@+id/fouls_team_a_value_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_toEndOf="@+id/fouls_team_a_label_txt"
                    android:text="@string/zero_value" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/corners_team_a_label_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_marginEnd="8dp"
                    android:text="@string/corners_label" />

                <TextView
                    android:id="@+id/corners_team_a_value_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_toEndOf="@+id/corners_team_a_label_txt"
                    android:text="@string/zero_value" />

            </RelativeLayout>

            <Button
                android:id="@+id/score_team_a_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/score_a_goal" />

            <Button
                android:id="@+id/commit_foul_team_a_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/commit_a_foul" />

            <Button
                android:id="@+id/award_corner_team_a_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/award_a_corner" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/TeamColumnStyle">

            <TextView
                style="@style/TeamLabelStyle"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/score_team_b_value_txt"
                style="@style/ScoreTextStyle"
                android:text="@string/zero_value" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/fouls_team_b_label_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_marginEnd="8dp"
                    android:text="@string/fouls_label" />

                <TextView
                    android:id="@+id/fouls_team_b_value_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_toEndOf="@+id/fouls_team_b_label_txt"
                    android:text="@string/zero_value" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/corners_team_b_label_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_marginEnd="8dp"
                    android:text="@string/corners_label" />

                <TextView
                    android:id="@+id/corners_team_b_value_txt"
                    style="@style/MetricsTextStyle"
                    android:layout_toEndOf="@+id/corners_team_b_label_txt"
                    android:text="@string/zero_value" />

            </RelativeLayout>

            <Button
                android:id="@+id/score_team_b_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/score_a_goal" />

            <Button
                android:id="@+id/commit_foul_team_b_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/commit_a_foul" />

            <Button
                android:id="@+id/award_corner_team_b_btn"
                style="@style/TrackButtonStyle"
                android:text="@string/award_a_corner" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/reset"
        android:textAllCaps="true" />

</RelativeLayout>